Applying sentiment analysis

--- a/part2_sentiment.ipynb
+++ b/part2_sentiment.ipynb
@@ -181,12 +181,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "76f733f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Author</th>\n",
+       "      <th>Content</th>\n",
+       "      <th>Keywords</th>\n",
+       "      <th>URL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Aurobindo Pharma, Dr Reddy's, Lupin, other pha...</td>\n",
+       "      <td>2025-07-08</td>\n",
+       "      <td>'A renewed push for 'Buy America' could compli...</td>\n",
+       "      <td>Debaroti Adhikary</td>\n",
+       "      <td>The shares of Indian pharma companies dropped ...</td>\n",
+       "      <td>pharma stocks, Nifty Pharma, Aurobindo Pharma ...</td>\n",
+       "      <td>https://www.moneycontrol.com/news/business/mar...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bharti Airtel share price falls 1.53%; stock a...</td>\n",
+       "      <td>2025-07-18</td>\n",
+       "      <td>With the stock currently trading at Rs 1,900.4...</td>\n",
+       "      <td>Alpha Desk</td>\n",
+       "      <td>Shares of Bharti Airtel were trading lower at ...</td>\n",
+       "      <td>Bharti Airtel, shares, stock price, Nifty 50, ...</td>\n",
+       "      <td>https://www.moneycontrol.com/news/business/sto...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Indian Oil and Adani Gas JV plans $161 million...</td>\n",
+       "      <td>2025-07-09</td>\n",
+       "      <td>The city gas distribution firm’s deal could be...</td>\n",
+       "      <td>Bloomberg</td>\n",
+       "      <td>IndianOil-Adani Gas Pvt. is planning to raise ...</td>\n",
+       "      <td>IndianOil-Adani Gas, IOC, convertible bond sale</td>\n",
+       "      <td>https://www.moneycontrol.com/news/business/com...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cipla Shares Fall in Today's Trading Session A...</td>\n",
+       "      <td>2025-06-03</td>\n",
+       "      <td>The stock's last traded price is Rs 1,461.30, ...</td>\n",
+       "      <td>Alpha Desk</td>\n",
+       "      <td>During today's trading session, Cipla expe...</td>\n",
+       "      <td>Cipla, stock market, financial performance, re...</td>\n",
+       "      <td>https://www.moneycontrol.com/news/business/sto...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Here are the sectors and stocks in focus amids...</td>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>With the recent liquidity injection by the Res...</td>\n",
+       "      <td>Anishaa Kumar</td>\n",
+       "      <td>Sectors such as consumer durables, financials,...</td>\n",
+       "      <td>MPC, RBI, stocks</td>\n",
+       "      <td>https://www.moneycontrol.com/news/business/sto...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                               Title       Date  \\\n",
+       "0  Aurobindo Pharma, Dr Reddy's, Lupin, other pha... 2025-07-08   \n",
+       "1  Bharti Airtel share price falls 1.53%; stock a... 2025-07-18   \n",
+       "2  Indian Oil and Adani Gas JV plans $161 million... 2025-07-09   \n",
+       "3  Cipla Shares Fall in Today's Trading Session A... 2025-06-03   \n",
+       "4  Here are the sectors and stocks in focus amids... 2025-02-07   \n",
+       "\n",
+       "                                         Description             Author  \\\n",
+       "0  'A renewed push for 'Buy America' could compli...  Debaroti Adhikary   \n",
+       "1  With the stock currently trading at Rs 1,900.4...         Alpha Desk   \n",
+       "2  The city gas distribution firm’s deal could be...          Bloomberg   \n",
+       "3  The stock's last traded price is Rs 1,461.30, ...         Alpha Desk   \n",
+       "4  With the recent liquidity injection by the Res...      Anishaa Kumar   \n",
+       "\n",
+       "                                             Content  \\\n",
+       "0  The shares of Indian pharma companies dropped ...   \n",
+       "1  Shares of Bharti Airtel were trading lower at ...   \n",
+       "2  IndianOil-Adani Gas Pvt. is planning to raise ...   \n",
+       "3      During today's trading session, Cipla expe...   \n",
+       "4  Sectors such as consumer durables, financials,...   \n",
+       "\n",
+       "                                            Keywords  \\\n",
+       "0  pharma stocks, Nifty Pharma, Aurobindo Pharma ...   \n",
+       "1  Bharti Airtel, shares, stock price, Nifty 50, ...   \n",
+       "2    IndianOil-Adani Gas, IOC, convertible bond sale   \n",
+       "3  Cipla, stock market, financial performance, re...   \n",
+       "4                                   MPC, RBI, stocks   \n",
+       "\n",
+       "                                                 URL  \n",
+       "0  https://www.moneycontrol.com/news/business/mar...  \n",
+       "1  https://www.moneycontrol.com/news/business/sto...  \n",
+       "2  https://www.moneycontrol.com/news/business/com...  \n",
+       "3  https://www.moneycontrol.com/news/business/sto...  \n",
+       "4  https://www.moneycontrol.com/news/business/sto...  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "news_df = pd.read_csv(\"../data/financial_news.csv\")\n",
+    "news_df = pd.read_csv(\"C:\\\\Users\\\\ayush\\\\OneDrive\\\\Desktop\\\\alphagaze\\\\data\\\\IN-FINews Dataset.csv\")\n",
     "\n",
     "news_df[\"Date\"] = pd.to_datetime(news_df[\"Date\"])\n",
     "news_df.head()"
@@ -194,7 +321,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "b4d417fc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>News</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-07-08</td>\n",
+       "      <td>Aurobindo Pharma, Dr Reddy's, Lupin, other pha...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-07-18</td>\n",
+       "      <td>Bharti Airtel share price falls 1.53%; stock a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-07-09</td>\n",
+       "      <td>Indian Oil and Adani Gas JV plans $161 million...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-06-03</td>\n",
+       "      <td>Cipla Shares Fall in Today's Trading Session A...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>Here are the sectors and stocks in focus amids...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ds                                               News\n",
+       "0 2025-07-08  Aurobindo Pharma, Dr Reddy's, Lupin, other pha...\n",
+       "1 2025-07-18  Bharti Airtel share price falls 1.53%; stock a...\n",
+       "2 2025-07-09  Indian Oil and Adani Gas JV plans $161 million...\n",
+       "3 2025-06-03  Cipla Shares Fall in Today's Trading Session A...\n",
+       "4 2025-02-07  Here are the sectors and stocks in focus amids..."
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Keep only Date and Title\n",
+    "news_df = news_df[[\"Date\", \"Title\"]]\n",
+    "\n",
+    "# Rename for consistency\n",
+    "news_df = news_df.rename(columns={\n",
+    "    \"Date\": \"ds\",\n",
+    "    \"Title\": \"News\"\n",
+    "})\n",
+    "\n",
+    "# Convert to datetime\n",
+    "news_df[\"ds\"] = pd.to_datetime(news_df[\"ds\"])\n",
+    "\n",
+    "# Drop empty headlines\n",
+    "news_df = news_df.dropna(subset=[\"News\"])\n",
+    "news_df = news_df[news_df[\"News\"].str.strip() != \"\"]\n",
+    "\n",
+    "news_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "351cdc0c",
    "metadata": {},
    "outputs": [],
@@ -211,51 +433,193 @@
     "        outputs = model(**inputs)\n",
     "        probs = torch.nn.functional.softmax(outputs.logits, dim=1)\n",
     "    \n",
-    "    # FinBERT label order: positive, negative, neutral\n",
     "    positive = probs[0][0].item()\n",
     "    negative = probs[0][1].item()\n",
     "    \n",
-    "    sentiment_score = positive - negative\n",
-    "    return sentiment_score\n"
+    "    return positive - negative\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "76070dcb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>News</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-07-08</td>\n",
+       "      <td>Aurobindo Pharma, Dr Reddy's, Lupin, other pha...</td>\n",
+       "      <td>-0.000096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-07-18</td>\n",
+       "      <td>Bharti Airtel share price falls 1.53%; stock a...</td>\n",
+       "      <td>0.824368</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-07-09</td>\n",
+       "      <td>Indian Oil and Adani Gas JV plans $161 million...</td>\n",
+       "      <td>0.999842</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-06-03</td>\n",
+       "      <td>Cipla Shares Fall in Today's Trading Session A...</td>\n",
+       "      <td>0.983879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>Here are the sectors and stocks in focus amids...</td>\n",
+       "      <td>0.994460</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ds                                               News  sentiment\n",
+       "0 2025-07-08  Aurobindo Pharma, Dr Reddy's, Lupin, other pha...  -0.000096\n",
+       "1 2025-07-18  Bharti Airtel share price falls 1.53%; stock a...   0.824368\n",
+       "2 2025-07-09  Indian Oil and Adani Gas JV plans $161 million...   0.999842\n",
+       "3 2025-06-03  Cipla Shares Fall in Today's Trading Session A...   0.983879\n",
+       "4 2025-02-07  Here are the sectors and stocks in focus amids...   0.994460"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "news_df[\"sentiment\"] = news_df[\"News\"].apply(finbert_sentiment)\n",
+    "\n",
     "news_df.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6cebea94",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ds</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2025-02-07</td>\n",
+       "      <td>0.605220</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2025-02-10</td>\n",
+       "      <td>0.025723</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2025-02-11</td>\n",
+       "      <td>0.419806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-02-12</td>\n",
+       "      <td>0.481427</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2025-02-13</td>\n",
+       "      <td>0.760332</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ds  sentiment\n",
+       "0 2025-02-07   0.605220\n",
+       "1 2025-02-10   0.025723\n",
+       "2 2025-02-11   0.419806\n",
+       "3 2025-02-12   0.481427\n",
+       "4 2025-02-13   0.760332"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "daily_sentiment = (\n",
     "    news_df\n",
-    "    .groupby(\"Date\")[\"sentiment\"]\n",
+    "    .groupby(\"ds\")[\"sentiment\"]\n",
     "    .mean()\n",
     "    .reset_index()\n",
     ")\n",
     "\n",
-    "daily_sentiment.columns = [\"ds\", \"sentiment\"]\n",
-    "daily_sentiment.head()"
+    "daily_sentiment.head()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "6e907ab4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "daily_sentiment.to_csv(\"../data/daily_sentiment.csv\", index=False)"
+    "daily_sentiment.to_csv(\"C:\\\\Users\\\\ayush\\\\OneDrive\\\\Desktop\\\\alphagaze\\\\data\\\\daily_sentiment.csv\", index=False)"
    ]
   }
  ],
