--- a/part4_shap.ipynb
+++ b/part4_shap.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "69e78872",
+   "metadata": {},
+   "source": [
+    "We will apply SHAP to FinBERT only, NOT Prophet.\n",
+    "\n",
+    "Prophet is already interpretable (trend, seasonality, regressors)\n",
+    "\n",
+    "BERT is a black box → SHAP is needed here\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "a325d20f",
